--- a/halo/template/parts/main-carousel.pug
+++ b/halo/template/parts/main-carousel.pug
@@ -71,8 +71,10 @@
               .extra
                 img.extra-img(src="img/carousel-img/carousel-2-extra-3.png", alt="")
 
-            p.carousel-header SỰ HOÀN HẢO
-            p.carousel-header CHƯA BAO GIỜ GẦN ĐẾN VẬY
+            p.carousel-header.display-till-md SỰ HOÀN HẢO
+            p.carousel-header.hidden-till-md Sự hoàn hảo chưa bao giờ ở gần đến vậy
+            p.carousel-header.display-till-md CHƯA BAO GIỜ GẦN ĐẾN VẬY
+
 
             button.btn.btn--light.seemore-btn(type='button') Xem chi tiết
 
