--- a/halo/template/parts/main-carousel.pug
+++ b/halo/template/parts/main-carousel.pug
@@ -93,6 +93,11 @@
               span.collab
                 i.fas.fa-times
               img.lotr-logo(src="img/carousel-img/lotr-logo.png", alt="")
+            
+            .carousel-caption__img-wrapper.hidden-till-md
+              .carousel-caption__img
+              .carousel-caption__img
+              .carousel-caption__img
 
             p.carousel-header MỘT NGÀM CHO TẤT CẢ
             p.carousel-header Kết nối mọi thứ với ngàm E-mount của 
@@ -101,15 +106,7 @@
 
             button.btn.btn--light.seemore-btn(type='button') Xem chi tiết
 
-          .carousel-caption__img
-
-          .carousel-caption__extra.hidden-till-md
-            .extra
-              img.extra-img(src="img/misc-img/carousel-1-extra-1.png", alt="") 
-            .extra
-              img.extra-img(src="img/misc-img/carousel-1-extra-2.png", alt="")
-            .extra
-              img.extra-img(src="img/misc-img/carousel-1-extra-3.png", alt="")
+          .carousel-caption__img.display-till-md
 
     a.carousel-control-prev(href='#main-carousel' data-slide='prev')
       img(src='img/misc-img/prev-arrow-xs-v2.png')
