--- a/halo/css/layout.css
+++ b/halo/css/layout.css
@@ -80,14 +80,22 @@ img {
 
 
 /* --------------- settings chung --------------- */
+
+/*
+Hệ thống .container:
+- màn xs (< 576px): width 100%, padding: 15px
+- màn sm md lg (576px -> 1199px): width 100%, padding: 30px
+- màn xl (> 1199px): max-width: 1140px, padding: 0px
+
+*/
 .container {  
-/* set các .container là fluid, sẽ giới hạn sau ở @media */
+/* set các .container là fluid(có padding) với màn < 768px */
   max-width: 100%;  
   padding: 0px 15px !important; /*sẽ đổi ở các breakpoints */
 }
 
 .container-md {
-/* set các .container là fluid, sẽ giới hạn sau ở @media */  
+/* set các .container là fluid(có padding) với màn < 768px */
   padding: 0px !important; /*sẽ về như container từ màn md */
 }
 
@@ -182,14 +190,19 @@ h1 {
   font-size: 36px; 
 }
 
-/* ------- font colors ------- */
+/* ------- colors ------- */
 #collapsibleNavbar li a,
-.log-max {
+.log-max,
+.dark-side {
   color: #FFFFFF;
 }
 
 .logo-canon {
   color: #CC0000;
+}
+
+.dark-side {
+  background-color: #222222;
 }
 
 /* -------  font weight ------- */
@@ -266,10 +279,17 @@ h1,
 /* chung -> toggler -> brand -> l-c-s -> menu */
 
 /* ------- settings chung nav ------- */
+
+header {
+  position: fixed;
+  z-index: 1000;
+  width: 100%;
+}
+
 .navbar {
   background-color: #222222;
   z-index: 100;
-  border-bottom: 1px solid #222222;
+
 }
 
 .navbar .container {
@@ -297,8 +317,7 @@ h1,
 }
 
 .navbar-brand {
-  padding: 9px 0px;
-  margin-left: 0px;
+  padding: 12.5px 0px;
 }
 
 /* ------- tổ hợp log-cart-search ------- */
@@ -473,8 +492,12 @@ Map: chung -> cart -> search bar -> search min -> search btn
     height: 100%;
   }
 
+  .navbar-brand {
+    padding: 10px 0px;
+  }
+
   .navbar-brand img {
-    height: 31px;
+    height: 30px;
   }
 
   .navbar-collapse { /* collapse từ full màn giảm về auto */
