--- a/halo/template/parts/header.pug
+++ b/halo/template/parts/header.pug
@@ -1,6 +1,6 @@
 header
   nav.navbar.navbar-expand-md.navbar-dark
-    .container
+    .container-xl.px-4.px-sm-5.px-xl-0
 
       button.navbar-toggler(type='button' data-toggle='collapse' data-target='#collapsibleNavbar' aria-controls="collapsibleNavbar" aria-expanded="false" aria-label="Toggle navigation")
         span.navbar-toggler-icon
