--- a/halo/template/parts/main-carousel.pug
+++ b/halo/template/parts/main-carousel.pug
@@ -10,103 +10,102 @@
   //nội dung carousel
   .carousel-inner
 
-    .carousel-item.banner-1.active
-      .container.container-md
-        .carousel-caption
+    .carousel-item.banner-1.container-fluid.p-0.active
+      .carousel-caption.container-xl.pb-0.px-0.px-md-5.px-xl-0
 
-          h1.carousel-title.font-weight-bold Tiêu điểm tháng 1
+        h1.carousel-title.font-weight-bold Tiêu điểm tháng 1
 
-          .carousel-caption__text
+        .carousel-caption__text
 
-            .logo-wrapper-1
-              p.logo-canon Canon
-              p.eos-r EOS R
-              .progress(style="height: 5px")
-                .progress-bar(role='progressbar' aria-valuemin='0' aria-valuemax='100' style='width: 100%; height: 5px')
-
-
-            p.carousel-header ĐỊNH NGHĨA LẠI 
-            p.carousel-header CHUẨN MỰC HÌNH ẢNH HIỆN ĐẠI
+          .logo-wrapper-1
+            p.logo-canon Canon
+            p.eos-r EOS R
+            .progress(style="height: 5px")
+              .progress-bar(role='progressbar' aria-valuemin='0' aria-valuemax='100' style='width: 100%; height: 5px')
 
 
-            button.btn.btn--light.seemore-btn(type='button') Xem chi tiết
+          p.carousel-header ĐỊNH NGHĨA LẠI 
+          p.carousel-header CHUẨN MỰC HÌNH ẢNH HIỆN ĐẠI
 
-          .carousel-caption__img
+
+          button.btn.btn--light.seemore-btn(type='button') Xem chi tiết
+
+        .carousel-caption__img
+
+        .carousel-caption__extra.hidden-till-md
+          .extra
+            img.extra-img(src="img/carousel-img/carousel-1-extra-1.png", alt="")
+            p.extra-text LẤY NÉT TỰ ĐỘNG DUAL PIXEL CMOS 
+          .extra
+            img.extra-img(src="img/carousel-img/carousel-1-extra-2.png", alt="")
+            p.extra-text TỐI ƯU HÓA ĐIỀU KHIỂN 
+          .extra
+            img.extra-img(src="img/carousel-img/carousel-1-extra-3.png", alt="")
+            p.extra-text QUAY VIDEO ĐA CHẾ ĐỘ ĐỘ PHÂN GIẢI 4K
+
+
+    .carousel-item.banner-2.container-fluid.p-0
+      .carousel-caption.container-xl.pb-0.px-0.px-md-5.px-xl-0
+
+        h1.carousel-title.font-weight-bold Tiêu điểm tháng 1
+
+        .carousel-caption__text
+        
+          .logo-wrapper-2
+            .progress.hidden-till-md(style='width: 150px; height: 5px')
+              .progress-bar(role='progressbar' aria-valuemin='0' aria-valuemax='100' style='width: 100%; height: 5px')
+
+            .logo-sony-a9-wrapper
+              p.logo-sony SONY
+              img.a9-logo(src="img/carousel-img/a9-logo.png", alt="")
+
+            .progress.display-till-md(style='height: 5px')
+              .progress-bar(role='progressbar' aria-valuemin='0' aria-valuemax='100' style='width: 100%; height: 5px')
 
           .carousel-caption__extra.hidden-till-md
             .extra
-              img.extra-img(src="img/carousel-img/carousel-1-extra-1.png", alt="")
-              p.extra-text LẤY NÉT TỰ ĐỘNG DUAL PIXEL CMOS 
+              img.extra-img(src="img/carousel-img/carousel-2-extra-1.png", alt="") 
             .extra
-              img.extra-img(src="img/carousel-img/carousel-1-extra-2.png", alt="")
-              p.extra-text TỐI ƯU HÓA ĐIỀU KHIỂN 
+              img.extra-img(src="img/carousel-img/carousel-2-extra-2.png", alt="")
             .extra
-              img.extra-img(src="img/carousel-img/carousel-1-extra-3.png", alt="")
-              p.extra-text QUAY VIDEO ĐA CHẾ ĐỘ ĐỘ PHÂN GIẢI 4K
+              img.extra-img(src="img/carousel-img/carousel-2-extra-3.png", alt="")
 
-    .carousel-item.banner-2
-      .container.container-md
-        .carousel-caption
+          p.carousel-header.display-till-md SỰ HOÀN HẢO
+          p.carousel-header.hidden-till-md Sự hoàn hảo chưa bao giờ ở gần đến vậy
+          p.carousel-header.display-till-md CHƯA BAO GIỜ GẦN ĐẾN VẬY
 
-          h1.carousel-title.font-weight-bold Tiêu điểm tháng 1
 
-          .carousel-caption__text
+          button.btn.btn--light.seemore-btn(type='button') Xem chi tiết
+
+        .carousel-caption__img
+
+
+    .carousel-item.banner-3.container-fluid.p-0
+      .carousel-caption.container-xl.pb-0.px-0.px-md-5.px-xl-0
+
+        h1.carousel-title.font-weight-bold Tiêu điểm tháng 1
+        
+        .carousel-caption__text
           
-            .logo-wrapper-2
-              .progress.hidden-till-md(style='width: 150px; height: 5px')
-                .progress-bar(role='progressbar' aria-valuemin='0' aria-valuemax='100' style='width: 100%; height: 5px')
-
-              .logo-sony-a9-wrapper
-                p.logo-sony SONY
-                img.a9-logo(src="img/carousel-img/a9-logo.png", alt="")
-
-              .progress.display-till-md(style='height: 5px')
-                .progress-bar(role='progressbar' aria-valuemin='0' aria-valuemax='100' style='width: 100%; height: 5px')
-
-            .carousel-caption__extra.hidden-till-md
-              .extra
-                img.extra-img(src="img/carousel-img/carousel-2-extra-1.png", alt="") 
-              .extra
-                img.extra-img(src="img/carousel-img/carousel-2-extra-2.png", alt="")
-              .extra
-                img.extra-img(src="img/carousel-img/carousel-2-extra-3.png", alt="")
-
-            p.carousel-header.display-till-md SỰ HOÀN HẢO
-            p.carousel-header.hidden-till-md Sự hoàn hảo chưa bao giờ ở gần đến vậy
-            p.carousel-header.display-till-md CHƯA BAO GIỜ GẦN ĐẾN VẬY
-
-
-            button.btn.btn--light.seemore-btn(type='button') Xem chi tiết
-
-          .carousel-caption__img
-
-    .carousel-item.banner-3
-      .container.container-md
-        .carousel-caption
-
-          h1.carousel-title.font-weight-bold Tiêu điểm tháng 1
+          .logo-wrapper-3
+            p.logo-sony SONY
+            span.collab
+              i.fas.fa-times
+            img.lotr-logo(src="img/carousel-img/lotr-logo.png", alt="")
           
-          .carousel-caption__text
-            
-            .logo-wrapper-3
-              p.logo-sony SONY
-              span.collab
-                i.fas.fa-times
-              img.lotr-logo(src="img/carousel-img/lotr-logo.png", alt="")
-            
-            .carousel-caption__img-wrapper.hidden-till-md
-              .carousel-caption__img
-              .carousel-caption__img
-              .carousel-caption__img
+          .carousel-caption__img--triple.hidden-till-md
+            .carousel-caption__img
+            .carousel-caption__img
+            .carousel-caption__img
 
-            p.carousel-header MỘT NGÀM CHO TẤT CẢ
-            p.carousel-header Kết nối mọi thứ với ngàm E-mount của 
-              span.logo-sony-inline SONY
+          p.carousel-header MỘT NGÀM CHO TẤT CẢ
+          p.carousel-header Kết nối mọi thứ với ngàm E-mount của 
+            span.logo-sony-inline SONY
 
 
-            button.btn.btn--light.seemore-btn(type='button') Xem chi tiết
+          button.btn.btn--light.seemore-btn(type='button') Xem chi tiết
 
-          .carousel-caption__img.display-till-md
+        .carousel-caption__img.display-till-md
 
     a.carousel-control-prev(href='#main-carousel' data-slide='prev')
       img(src='img/misc-img/prev-arrow-xs-v2.png')
