--- a/halo/template/index.pug
+++ b/halo/template/index.pug
@@ -12,37 +12,39 @@ block content
 
   
   section.intro.intro--camera
-    .container.px-sm-5.px-xl-0
-      .intro__text.d-flex.flex-column
-        h1 Máy ảnh DSLR/Mirrorless
+    .container-xl.px-sm-5.px-xl-0
+      .row
+        .intro__text.d-flex.flex-column.col-md
+          h1 Máy ảnh DSLR/Mirrorless
 
-        h3 
-          | Phá bỏ giới hạn từ chiếc máy ảnh du lịch giá rẻ
-          br
-          | và cả smartphone đắt tiền của bạn
+          h3.font-italic 
+            | Phá bỏ giới hạn từ chiếc máy ảnh du lịch giá rẻ
+            br
+            | và cả smartphone đắt tiền của bạn
 
-        button.btn.btn--dark.seemore-btn(type='button') Xem chi tiết
+          button.btn.btn--dark.seemore-btn(type='button') Xem chi tiết
 
-      .intro__img
-        img(src="img/body-img/camera-intro-imgv2.png", alt="")
+        .intro__img.col-md
+          img(src="img/body-img/camera-intro-imgv2.png", alt="")
 
   section.intro.intro--lens.dark-side
-    .container.px-sm-5.px-xl-0
-      .intro__text.d-flex.flex-column
-        h1 Ống kính máy ảnh
-        
-        h3 Góc nhìn mới, cảm nhận mới, thế giới mới
+    .container-xl.px-sm-5.px-xl-0
+      .row
+        .intro__text.d-flex.flex-column.col-md
+          h1 Ống kính máy ảnh
+          
+          h3.font-italic Góc nhìn mới, cảm nhận mới, thế giới mới
 
-        button.btn.btn--light.seemore-btn(type='button') Xem chi tiết
+          button.btn.btn--light.seemore-btn(type='button') Xem chi tiết
 
-      .intro__img
-        img(src="img/lens-img/lens-intro-imgv2.png", alt="")
+        .intro__img.col-md
+          img(src="img/lens-img/lens-intro-imgv2.png", alt="")
 
   section.intro.intro--equip
-    .container.px-sm-5.px-xl-0
+    .container-xl.px-sm-5.px-xl-0
       .intro__text.d-flex.flex-column
         h1 Phụ kiện máy ảnh
-        h3 Dù có “pro” đến mấy cũng cần các trợ thủ đắc lực
+        h3.font-italic Dù “pro” đến mấy cũng cần các trợ thủ đắc lực
 
       .intro__img.display-till-md
         img(src="img/equip-img/equip-intro--min.png", alt="")
@@ -60,54 +62,54 @@ block content
       button.btn.btn--dark.seemore-btn(type='button') Xem chi tiết
 
   section.specials.dark-side
-    .container.px-sm-5.px-xl-0
-      h1 Đối tác chiến lược
-      .brands__img
-        img(src="img/misc-img/brands-sony.png", alt="")
-        img(src="img/misc-img/brands-nikon.png", alt="")
-        img(src="img/misc-img/brands-canon.png", alt="")
-        img(src="img/misc-img/brands-sigma.png", alt="")
+    .container-xl.px-sm-5.px-xl-0.d-flex.flex-column.align-items-center
+      h1.mb-5 Đối tác chiến lược
+      .brands__img.row
+        img.col-6.col-md-3.mb-5(src="img/misc-img/brands-sony.png", alt="")
+        img.col-6.col-md-3.mb-5(src="img/misc-img/brands-nikon.png", alt="")
+        img.col-6.col-md-3.mb-5(src="img/misc-img/brands-canon.png", alt="")
+        img.col-6.col-md-3.mb-5(src="img/misc-img/brands-sigma.png", alt="")
       .brands__text
-        h3 Là đối tác chiến lược của Sony, Canon, Nikon và Sigma, HALO sẽ miễn phí nâng thời hạn bảo hành sản phẩm chính hãng của các thương hiệu này: từ 12 tháng lên 24 tháng
+        h3.font-italic.text-center Là đối tác chiến lược của Sony, Canon, Nikon và Sigma, HALO sẽ miễn phí nâng thời hạn bảo hành sản phẩm chính hãng của các thương hiệu này: 
+          span.font-weight-bold từ 12 tháng lên 24 tháng
 
-      h1 Chính sách độc quyền
+      h1.mb-5 Chính sách độc quyền
       .policy
-        .policy__item
-          p.policy__text
-            span Miễn phí
-            | vận chuyển nội thành Hà Nội
-            br
-            | (riêng phụ kiện: chỉ áp dụng với đơn hàng tổng giá trị trên 200,000 đ)
+        .row
+          .policy__item.col.border.border-white.mx-3
+            p.policy__text.text-center
+              span Miễn phí
+              | vận chuyển nội thành Hà Nội
+              br
+              | (riêng phụ kiện: chỉ áp dụng với đơn hàng tổng giá trị trên 200,000 đ)
 
-          .policy__icon
-            i.fas.fa-truck
-            p FREE
+            .policy__icon.d-flex.justify-content-center.align-items-center
+              i.fas.fa-truck
+              p FREE
 
-        .policy__item
-          p.policy__text
-            | Đổi mới sản phẩm hoặc
-            span  hoàn tiền 100%
-            | giá trị sản phẩm trong 14 ngày nếu có lỗi từ nhà sản xuất
+          .policy__item.col.border.border-white.mx-3
+            p.policy__text.text-center Đổi mới sản phẩm hoặc
+              span  hoàn tiền 100%
+              | giá trị sản phẩm trong 14 ngày nếu có lỗi từ nhà sản xuất
 
-          .policy__icon
-            i.fas.fa-history
-            p 100%
+            .policy__icon.d-flex.justify-content-center.align-items-center
+              i.fas.fa-history
+              p 100%
 
-        .policy__item
-          p.policy__text
-            | Hỗ trợ trả góp mọi sản phẩm với 
-            span 0% lãi suất
-            br
-            | Hỗ trợ thanh toán trực tuyến, thẻ tín dụng, ví điện tử
+          .policy__item.col.border.border-white.mx-3
+            p.policy__text.text-center Hỗ trợ trả góp mọi sản phẩm với 
+              span 0% lãi suất
+              br
+              | Hỗ trợ thanh toán trực tuyến, thẻ tín dụng, ví điện tử
 
-          .policy__icon
-            i.far.fa-credit-card
-            p 0%
+            .policy__icon.d-flex.justify-content-center.align-items-center
+              i.far.fa-credit-card
+              p 0%
 
       button.btn.btn--light.seemore-btn(type='button') Xem chi tiết       
         
   section.promo
-    .container.px-sm-5.px-xl-0
+    .container-xl.px-sm-5.px-xl-0
       h1 Tin khuyến mại
 
       .promo__collection
@@ -118,7 +120,7 @@ block content
       button.btn.btn--dark.seemore-btn(type='button') Xem thêm
 
   section.review.dark-side
-    .container.px-sm-5.px-xl-0
+    .container-xl.px-sm-5.px-xl-0
       h1 HALO review
 
       .review-item
@@ -146,7 +148,7 @@ block content
       button.btn.btn--light.seemore-btn(type='button') Xem thêm        
 
   section.connection
-    .container.px-sm-5.px-xl-0
+    .container-xl.px-sm-5.px-xl-0
       h1.connection__header Đăng ký email để nhận tin tức mới nhất từ HALO
       input.connection__input(type="text" placeholder="Email của bạn...")
       button.btn.connection__submit-btn Gửi
