--- a/halo/template/index.pug
+++ b/halo/template/index.pug
@@ -63,70 +63,67 @@ block content
 
   section.specials.dark-side
     .container-xl.px-sm-5.px-xl-0.d-flex.flex-column.align-items-center
-      h1.mb-5 Đối tác chiến lược
+      h1 Đối tác chiến lược
       .brands__img.row
-        img.col-6.col-md-3.mb-5(src="img/misc-img/brands-sony.png", alt="")
-        img.col-6.col-md-3.mb-5(src="img/misc-img/brands-nikon.png", alt="")
-        img.col-6.col-md-3.mb-5(src="img/misc-img/brands-canon.png", alt="")
-        img.col-6.col-md-3.mb-5(src="img/misc-img/brands-sigma.png", alt="")
+        img.brands-item.col-6.col-md-3(src="img/misc-img/brands-sony.png", alt="")
+        img.brands-item.col-6.col-md-3(src="img/misc-img/brands-nikon.png", alt="")
+        img.brands-item.col-6.col-md-3(src="img/misc-img/brands-canon.png", alt="")
+        img.brands-item.col-6.col-md-3(src="img/misc-img/brands-sigma.png", alt="")
       .brands__text
         h3.font-italic.text-center Là đối tác chiến lược của Sony, Canon, Nikon và Sigma, HALO sẽ miễn phí nâng thời hạn bảo hành sản phẩm chính hãng của các thương hiệu này: 
           span.font-weight-bold từ 12 tháng lên 24 tháng
 
-      h1.mb-5 Chính sách độc quyền
-      .policy
-        .row
-          .policy__item.col.border.border-white.mx-3
-            p.policy__text.text-center
-              span Miễn phí
-              | vận chuyển nội thành Hà Nội
-              br
-              | (riêng phụ kiện: chỉ áp dụng với đơn hàng tổng giá trị trên 200,000 đ)
+      h1 Chính sách độc quyền
+      .policy.d-flex.justify-content-between
+        .policy__item.border.border-white.d-flex.flex-column.justify-content-between
+          p.policy__text.text-center
+            span.font-weight-bold Miễn phí 
+            | vận chuyển nội thành Hà Nội
+            br
+            | (riêng phụ kiện: chỉ áp dụng với đơn hàng tổng giá trị trên 200,000 đ)
 
-            .policy__icon.d-flex.justify-content-center.align-items-center
-              i.fas.fa-truck
-              p FREE
+          .policy__icon.d-flex.justify-content-center.align-items-center
+            i.fas.fa-truck
+            p FREE
 
-          .policy__item.col.border.border-white.mx-3
-            p.policy__text.text-center Đổi mới sản phẩm hoặc
-              span  hoàn tiền 100%
-              | giá trị sản phẩm trong 14 ngày nếu có lỗi từ nhà sản xuất
+        .policy__item.border.border-white.d-flex.flex-column.justify-content-between
+          p.policy__text.text-center Đổi mới sản phẩm hoặc
+            span.font-weight-bold  hoàn tiền 100% 
+            | giá trị sản phẩm trong 14 ngày nếu có lỗi từ nhà sản xuất
 
-            .policy__icon.d-flex.justify-content-center.align-items-center
-              i.fas.fa-history
-              p 100%
+          .policy__icon.d-flex.justify-content-center.align-items-center
+            i.fas.fa-history
+            p 100%
 
-          .policy__item.col.border.border-white.mx-3
-            p.policy__text.text-center Hỗ trợ trả góp mọi sản phẩm với 
-              span 0% lãi suất
-              br
-              | Hỗ trợ thanh toán trực tuyến, thẻ tín dụng, ví điện tử
+        .policy__item.border.border-white.d-flex.flex-column.justify-content-between
+          p.policy__text.text-center Hỗ trợ trả góp mọi sản phẩm với 
+            span.font-weight-bold 0% lãi suất 
+            br
+            | Hỗ trợ thanh toán trực tuyến, thẻ tín dụng, ví điện tử
 
-            .policy__icon.d-flex.justify-content-center.align-items-center
-              i.far.fa-credit-card
-              p 0%
-
-      button.btn.btn--light.seemore-btn(type='button') Xem chi tiết       
+          .policy__icon.d-flex.justify-content-center.align-items-center
+            i.far.fa-credit-card
+            p 0%  
         
   section.promo
     .container-xl.px-sm-5.px-xl-0
       h1 Tin khuyến mại
 
-      .promo__collection
-        img.promo-item(src="img/misc-img/promo-img-1.jpg", alt="")
-        img.promo-item(src="img/misc-img/promo-img-2.jpg", alt="") 
-        img.promo-item(src="img/misc-img/promo-img-1.jpg", alt="")
+      .promo__collection.row
+        img.promo-item.col-md-4(src="img/misc-img/promo-img-1.jpg", alt="")
+        img.promo-item.col-md-4(src="img/misc-img/promo-img-2.jpg", alt="") 
+        img.promo-item.col-md-4(src="img/misc-img/promo-img-1.jpg", alt="")
 
-      button.btn.btn--dark.seemore-btn(type='button') Xem thêm
+      button.btn.btn--dark.seemore-btn.mx-auto(type='button') Xem thêm
 
   section.review.dark-side
     .container-xl.px-sm-5.px-xl-0
       h1 HALO review
 
-      .review-item
+      .review-item.d-flex
         img.review-item__img(src="img/misc-img/review-img.png", alt="")
         
-        .review-item__content
+        .review-item__content.d-flex.flex-wrap
           h2 Top 5 DSLR đáng mua năm 2021
           p.subtext Trung Đức
           p.subtext 
@@ -134,7 +131,7 @@ block content
             | 01/01/2021
           p.review-headlines Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản. 
       
-      .review-item
+      .review-item.d-flex
         img.review-item__img(src="img/misc-img/review-img.png", alt="")
         
         .review-item__content
