--- a/halo/template/index.pug
+++ b/halo/template/index.pug
@@ -120,18 +120,18 @@ block content
     .container-xl.px-sm-5.px-xl-0
       h1 HALO review
 
-      .review-item.d-flex
+      a.review-item.d-flex(href="#")
         img.review-item__img(src="img/misc-img/review-img.png", alt="")
         
-        .review-item__content.d-flex.flex-wrap
+        .review-item__content.d-flex.flex-wrap.align-items-start
           h2 Top 5 DSLR đáng mua năm 2021
           p.subtext Trung Đức
           p.subtext 
             i.far.fa-clock
             | 01/01/2021
-          p.review-headlines Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản. 
+          p.review-headlines.hidden-till-md Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản. 
       
-      .review-item.d-flex
+      a.review-item.d-flex(href="#")
         img.review-item__img(src="img/misc-img/review-img.png", alt="")
         
         .review-item__content
@@ -140,7 +140,7 @@ block content
           p.subtext 
             i.far.fa-clock
             | 01/01/2021
-          p.review-headlines Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản. 
+          p.review-headlines.hidden-till-md Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản. 
 
       button.btn.btn--light.seemore-btn(type='button') Xem thêm        
 
