--- a/halo/template/index.pug
+++ b/halo/template/index.pug
@@ -123,11 +123,11 @@ block content
       a.review-item.d-flex(href="#")
         img.review-item__img(src="img/misc-img/review-img.png", alt="")
         
-        .review-item__content.d-flex.flex-wrap.align-items-start
+        .review-item__content.d-flex.flex-wrap.align-items-start.align-content-start
           h2 Top 5 DSLR đáng mua năm 2021
-          p.subtext Trung Đức
-          p.subtext 
-            i.far.fa-clock
+          p.subtext.font-italic.font-weight-light Trung Đức
+          p.subtext.font-italic.font-weight-light
+            i.far.fa-clock.mx-2 
             | 01/01/2021
           p.review-headlines.hidden-till-md Trên thị trường có rất nhiều máy ảnh DSLR đến từ các hãng lớn như Nikon, Canon, Sony,... lựa chọn một chiếc máy ảnh phù hợp là điều không đơn giản. 
       
