--- a/halo/css/index.css
+++ b/halo/css/index.css
@@ -270,13 +270,12 @@ section {
 }
 
 .review-item__img {
-  width: 30%;
+  width: 35%;
   border-radius: 4px;
 }
 
 .review-item__content {
-  width: 70%;
-  padding: 5px;
+  padding: 5px 10px;
 }
 
 .review-item h2 {
@@ -288,6 +287,7 @@ section {
 .review-item .subtext {
   font-size: 9px;
   width: fit-content;
+  margin: 10px 0px;
 }
 
 .review-headlines {
